--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,7 +7,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: "#DFF3FC";
-  font-family: "Space Grotesk";
+  font-family: "Raleway";
   scroll-behavior: smooth;
 }
